# PingTask

./: CMakeLists.txt  README.md  build.sh  clang-format  main  main.cpp  test  test.cpp
src/: daemon.cpp  main.cpp  network.cpp  network.h  types.h  unix_socket.cpp  unix_socket.h  utils.cpp  utils.h
